--- a/estilo.css
+++ b/estilo.css
@@ -80,7 +80,7 @@ li:hover {
     background-color: #405258;
 }
 #imagem_fundo {
-    background: url("agua potavel.png");
+    background: "agua potavel.png";
     height: 100%;
     text-align: left;
     background-size: cover;
